# CompactText

./: .gitignore  CMakeLists.txt  README.md  TODO.md  aclaraciones.txt  decoder  decoder_mpi  encoder_mpi  memory.docx
MPI/: input1.txt  input2.txt  input3.txt  main_mpi.c  makefile
OpenMp/: main_openmp.c  makefile
Secuencial/: Makefile  input1.txt  input3.txt  main.c
data/: cr7_example.txt  decoded_output0.txt  example.txt  example_messi.txt  high_text2.txt  high_text4.txt  high_text5.txt  high_text6.txt  hombres.txt  hombres_output.txt  iniesta_example.txt  input1.txt  input_0.txt  lorem_high1.txt  lorem_low.txt  lorem_medium.txt  low_text1.txt  low_text2.txt  low_text3.txt  medium_text1.txt  medium_text2.txt  medium_text3.txt  mpi_output.txt  new.txt  output1_decoded.txt  vocab.dict
data/S/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/: common.h  common.hpp  mpi.cpp  omp.cpp  secuencial.cpp  sequential.c  sequential.cpp
src/MPI/: makefile
src/OpenMp/: makefile
src/Secuencial/: Makefile
src/mpi/: makefile  mpi.c
src/openmp/: main_openmp.c  makefile  omp.c
src/openmp/encoder/: encoder  encoder.c
src/sequencial/: Makefile
src/sequential/: Makefile  seq.c
